--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class='bio_circle'></div>
         <p class='long_bio_text'> I am a front-end developer. I've spent my career creating a wide range of visual media. 
           I've photographed New York Fashion Week for the Associated Press, produced baking videos with Martha Stewart and pursued big-game fish off the Florida coast for a fishing television program. 
-          I'm also a hiker, baker and BMX national champion (I was nine-years-old but I'm counting it). Now, I'm excited to build stunning and creative web experiences.
+          I'm also a hiker, amateur motorcycle mechanic and BMX national champion (I was nine-years-old but I'm counting it). Now, I'm excited to build stunning and creative web experiences.
         </p>
       
         <nav class="socme_holder">
