--- a/ui.html
+++ b/ui.html
@@ -35,7 +35,7 @@
   
       <section id='bio' class='bio_no_show_ui'>
         <div class='bio_circle'></div>
-        <p class='long_bio_text'> I am a Swiss Army knife of creativity. I've spent my career creating a wide range of visual media. 
+        <p class='long_bio_text'> I've spent my career creating a wide range of visual media. 
             I've photographed New York Fashion Week for the Associated Press, produced baking videos with Martha Stewart, 
             designed billboards, created a podcast about Otis Redding, pursued big-game fish off the Florida coast for a fishing 
             show and I once wrote a song for a minor league baseball team (Go HotRods!).  
