--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
       <section class='red_box_bio'>
         <h2 id='ray_text'>About Me</h2>
-        <img  id='headshot' class='rayhead' src='./images/ray_head_big.png' alt='photo of Ray'/>
+    <img  id='headshot' class='rayhead' src='./images/ray_head_big.jpg' alt='photo of Ray'/>
       
         <section class='blue_box_bio'> 
           <p id='ray_bio'>
