--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="name">
     <meta name="description" content="description here">
     <meta name="keywords" content="keywords,here">
-    <meta property="og:image" content="./images/ray_head_big.jpg" />
+    <meta property="og:image" content="https://raykugler.com/images/ray_head_big.jpg" />
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Righteous" rel="stylesheet">
   </head>
