--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Ray Kugler Portfolio</title>
     <script src="script.js"></script>
-    <meta name="author" content="name">
-    <meta name="description" content="description here">
+    <meta name="author" content="Ray Kugler">
+    <meta name="description" content="Ray's Portfolio">
     <meta name="keywords" content="keywords,here">
     <meta property="og:image" content="https://raykugler.com/images/ogimage.png" />
-
+    <meta name="twitter:title" content="Ray Kugler/Front End Developer">
+<meta name="twitter:description" content="Ray's Portfolio">
+<meta name="twitter:image" content="https://raykugler.com/images/ogimage.png">
+<meta name="twitter:site" content="@raykugler">
+<meta name="twitter:creator" content="@raykugler">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Righteous" rel="stylesheet">
   </head>
