twitter card url

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <meta name="twitter:image" content="https://raykugler.com/images/ogimage.png">
 <meta name="twitter:site" content="@raykugler">
 <meta name="twitter:creator" content="@raykugler">
+<meta name="twitter:url" content=https:\\raykugler.com">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Righteous" rel="stylesheet">
   </head>
