twitter card update

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Ray Kugler Portfolio</title>
     <script src="script.js"></script>
+    <meta name="robots" content="noindex" />
     <meta name="author" content="Ray Kugler">
     <meta name="description" content="Ray's Portfolio">
     <meta name="keywords" content="keywords,here">
@@ -15,7 +16,7 @@
 <meta name="twitter:image" content="https://raykugler.com/images/ogimage.png">
 <meta name="twitter:site" content="@raykugler">
 <meta name="twitter:creator" content="@raykugler">
-<meta name="twitter:url" content=https:\\raykugler.com">
+
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Righteous" rel="stylesheet">
   </head>
