internal link update

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a href="https://github.com/raykugler/arbitrage" class='link_style git_link' alt='go to arbitrage git'>
             <img  class='git_badge' src='./images/github.png' alt='go to arbitrage git'/>
           </a>
-          <a href='/arbitrage' class='site_link' alt='go to arbitrage site'>
+          <a href='./arbitrage/index.html' class='site_link' alt='go to arbitrage site'>
             <img  class='link_image' src='./images/link_icon.png' alt='go to arbitrage site'/> 
           </a>
         </nav>
@@ -177,7 +177,7 @@
             <img  class='git_badge' src='./images/github.png'  alt='go to loan calculator git'/> 
           </a>
           
-          <a href='/loancalculator' class='site_link' alt='go to loan calculator site'>
+          <a href='./loan_calculator/index.html' class='site_link' alt='go to loan calculator site'>
             <img  class='link_image' src='./images/link_icon.png' alt='go to loan calculator site'/> 
           </a>
         
