internal link update 3

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <img  class='git_badge' src='./images/github.png'  alt='go to loan calculator git'/> 
           </a>
           
-          <a href='./loan_calculator/index.html' class='site_link' alt='go to loan calculator site'>
+          <a href='./loan/index.html' class='site_link' alt='go to loan calculator site'>
             <img  class='link_image' src='./images/link_icon.png' alt='go to loan calculator site'/> 
           </a>
         
