resume second send

--- a/resume.html
+++ b/resume.html
@@ -69,7 +69,7 @@
                     <li>Python</li>
                     <li>Ruby</li>
                     <li>Node.js</li>
-                    <li>---</li>
+                    <li>UX Design</li>
                 </ul>
                 <ul class='qual_list_two'>
                     <li>---</li>
@@ -86,8 +86,8 @@
                 <div class='list_box'>
                 <ul class='qual_list_one'>
                     <li>PHP</li>
-                    <li>---</li>
-                    <li>---</li>
+                    <li>MySQL</li>
+                    <li>AGILE</li>
                     <li>---</li>
                     <li>---</li>
                 </ul>
@@ -107,6 +107,7 @@
         <section class='res_exp'>
                 <div class='exp_box'>
                       <h3 class='small_exp_header'>Web Development</h3>
+                      <div class="exp_connector"></div>
                       <p class='exp_text'>place holder text... place holder text...
                             place holder text...
                             place holder text...
@@ -115,6 +116,7 @@
                     </div>
                     <div class='exp_box'>
                             <h3 class='small_exp_header'>Video Production and Photography</h3>
+                            <div class="exp_connector"></div>
                             <p class='exp_text'>place holder text... place holder text...
                                   place holder text...
                                   place holder text...
@@ -123,6 +125,7 @@
                     </div>
                     <div class='exp_box'>
                             <h3 class='small_exp_header'>Latest Experience</h3>
+                            <div class="exp_connector"></div>
                             <p class='exp_text'>place holder text... place holder text...
                                   place holder text...
                                   place holder text...
@@ -131,6 +134,7 @@
                         </div>
                     <div class='exp_box'>
                             <h3 class='small_exp_header'>Latest Experience</h3>
+                            <div class="exp_connector"></div>
                             <p class='exp_text'>place holder text... place holder text...
                                   place holder text...
                                   place holder text...
