--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,6 @@
                 </ul>
                 <ul class='qual_list_two'>
                     <li>React</li>
-                    <li>GraphQL/CMS</li>
                     <li>Adobe Creative Suite</li>
                     <li>APIs</li>
                     <li>WordPress</li>
@@ -46,7 +45,8 @@
                 <div class="connector"></div>
                 <div class='list_box'>
                 <ul class='qual_list_one'>
-                    <li>webpack</li>
+ 
+                    <li>GraphQL/CMS</li>
                     <li>gulp</li>
                     <li>npm/Yarn</li>
                     <li>Sass</li>
@@ -72,10 +72,10 @@
                     <li>UX Design</li>
                 </ul>
                 <ul class='qual_list_two'>
-                    <li>---</li>
-                    <li>---</li>
-                    <li>---</li>
-                    <li>---</li>
+                    <li>Konva</li>
+                    <li>D3</li>
+                    <li>Chart.js</li>
+                    <li>webpack</li>
                     <li>---</li>
                 </ul>
             </div>
