--- a/index.html
+++ b/index.html
@@ -54,9 +54,20 @@
             <img src="./images/twitter_icon.png" class='twitter_icon' alt='twitter icon'/>
           </a>
           <a class='linked_link' href="https://www.linkedin.com/in/raykugler/" target="_blank" alt='linked in link'>
-            <p class='resume_on'>resum&#233;</p>
+         
             <img src="./images/linkedin_icon.png" class='linkedin_icon' alt='linked in icon'/>
             </a>
+            <a class='github_holder_top socme_icon' href='https://github.com/raykugler' target="_blank" alt='instagram link'> 
+              <img src="./images/github_icon.png" class='github_icon_top' alt='github icon'/>
+            </a>
+            <!-- <a class='rk_holder socme_icon rk_icon' href='./resume.html' target="_blank" alt='instagram link'> 
+              <p class='rk_text'>RK</p>
+
+            </a> -->
+            <a class='github_holder_top socme_icon' href='./resume.html' target="_blank" alt='resume link'> 
+              <img src="./images/rk.png" class='github_icon_top' alt='github icon'/>
+            </a>
+
         </nav>
       </section>
 
